--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.2",
+    "nodemon": "^2.0.20",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   },
   "name": "server",
   "version": "1.0.0",
@@ -9,13 +14,12 @@
     "node": "16.17.0",
     "npm": "8.15.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "description": ""
 }
-
